scss/partials/_add_comment.scss
div.add-comment-box-container {
  position: relative;
  width: 100%;

  @include tablet() {
    padding: 0;
    width: 100%;
    position: relative;
  }

  div.add-comment-box {
    position: relative;
    width: 100%;

    @include user-profile(24);

    @include mobile() {
      @include user-profile(32);      
    }

    div.user-avatar-img-container {
      float: left;
      margin-top: 10px;

      @include mobile() {
        margin-top: 6px;
      }
    }

    div.add-comment-internal {
      margin-left: 40px;
      position: relative;
      border-radius: 4px;
      border: 1px solid $mid_light_grey;
      overflow-x: hidden;
      overflow-y: auto;
      padding: 9px 14px;
      background-color: white;
      width: calc(100% - 40px);

      @include mobile() {
        margin-left: 0;
        float: right;
        width: calc(100% - 40px);
      }

      &.active {
        box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.07);
      }

      div.medium-editor-media-picker {
        margin-top: 0;
        top: 0;
        left: unset;
        right: 16px;
      }

      @include mobile() {
        left: unset;
        position: relative;
        bottom: unset;
      }

      div.add-comment {
        resize: none;
        outline: none;
        cursor: auto;
        margin: 0;
        height: auto;
        min-height: 24px;
        outline: none;


        &.medium-editor-placeholder-hidden:after {
          display: none !important;
        }

        .emojione {
          @include emoji-size(13);
        }

        @include activity-comment();
      }
    }
  }

  div.add-comment-footer {
    height: 32px;
    width: 100%;
    margin-top: 16px;


    &.hide-footer * {
      display: none;
    }

    button.close-reply-bt {
      width: 22px;
      height: 32px;
      background-image: cdnUrl("/img/ML/cmail_delete.svg");
      background-size: 14px 16px;
      background-position: center;
      background-repeat: no-repeat;
      opacity: 0.4;
      padding: 0;
      float: right;
      margin-left: 12px;

      &:hover {
        opacity: 1;
      }

      @include tablet() {
        display: none;
      }
    }

    div.emoji-picker {
      float: right;

      button.emoji-button {
        width: 24px;
        height: 32px;
        background-position: center;
        background-size: 16px 16px;
        padding: 0px;
        position: absolute;
        top: 0px;
        left: 0px;
        cursor: pointer;
      }

      div.picker-container {
        right: -16px;
        left: unset;

        @include mobile() {
          left: 0;
          right: 0;
          top: 0 !important;
        }
      }
    }

    button.send-btn {
      float: right;
      height: 32px;
      padding: 7px 16px;
      margin: 0 0 0 14px;
      background-color: $carrot_green;
      color: white;
      @include OC_Body_Bold();
      font-size: 14px;
      line-height: 18px;
      border-radius: 4px;

      &:disabled {
        cursor: not-allowed;
        opacity: 1 !important;

        @include big_web() {
          &:hover {
            opacity: 1;
          }
        }
      }
    }

    div.buttons-separator {
      width: 1px;
      height: 16px;
      float: right;
      background-color: $ultra_light_grey;
      margin: 7px 8px 0;
    }

    button.complete-follow-up {
      float: right;
      height: 24px;
      @include OC_Body_Book();
      font-size: 14px;
      line-height: 24px;
      color: $deep_navy;
      padding: 0 8px 0 24px;
      position: relative;
      margin-top: 5px;

      div.carrot-checkbox {
        position: absolute;
        top: 4px;
        left: 0px;
      }

      &.unselected {
        opacity: 0.5;

        &:hover {
          opacity: 1;
        }
      }

      &:disabled {
        cursor: not-allowed;
        opacity: 1 !important;

        @include mobile() {
          opacity: 0.5;
        }

        @include big_web() {
          &:hover {
            opacity: 1;
          }
        }
      }
    }
  }
}

