More fixes for add comment field on mobile.

--- a/scss/partials/_add_comment.scss
+++ b/scss/partials/_add_comment.scss
@@ -38,12 +38,6 @@ div.add-comment-box-container {
       background-color: white;
       width: calc(100% - 40px);
 
-      @include mobile() {
-        margin-left: 0;
-        float: right;
-        width: calc(100% - 40px);
-      }
-
       &.active {
         box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.07);
       }
